trying to fix cover buttons spacing

--- a/css/cover.css
+++ b/css/cover.css
@@ -119,6 +119,10 @@ body {
   text-align: center;
 }
 
+.buy-buttons a {
+  margin-bottom: .5em;
+}
+
 
 /* Footer */
 
